--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "rfdc": "^1.3.0",
     "web-vitals": "^2.1.3",
     "whot": "^1.0.6"
   },
